Update CORs config